# TheSolution

./: .gitignore  3D_VISUALIZATION_IMPLEMENTATION_REPORT.md  3d_solution_file_handler.py  3d_solution_gui.py  CLEANUP_COMPLETION_REPORT.md  CMakeLists.txt  COMPATIBILITY_REPORT.md  CURSOR_PROMPTS.md  CURSOR_SETUP.md  DEVELOPMENT_REPORT.md  DEVELOPMENT_STANDARDS.md  FINAL_CLEANUP_REPORT.md  GUI_OVERVIEW.md  IMPORT_PATH_FIX_REPORT.md  INSTALL.md  LANGUAGE_COMPLIANCE_FINAL_REPORT.md  LANGUAGE_COMPLIANCE_REPORT.md  OPENCASCADE_INTEGRATION_SUMMARY.md  PROJECT_ARCHITECTURE_REQUIREMENTS.md  PROJECT_CLEANUP_PLAN.md  README.md  REAL_3D_VISUALIZATION_IMPLEMENTATION_REPORT.md  SOLUTION_DEVELOPMENT_PLAN.md  SOLUTION_TREE.md  check_conda_environment.py  cursor prompts.md  cursor setup.md  cursor-settings.json  cursor_pickle_to_json_prompt.md  debug_occ.py  demo_objects_20250817_093712.txt  demo_objects_20250817_094027.txt  demo_objects_20250817_094132.txt  demo_objects_20250817_094615.txt  demo_objects_20250817_094724.txt  demo_objects_20250817_100832.txt  demo_opencascade_integration.py  demo_root_solution.py  demo_thesolution.py  filename.3d_sol  (+20 more)
.cursor/rules/: 1.mdc
.github/workflows/: ci.yml
Base Solution/cpp/: CMakeLists.txt  geometry_primitives.cpp
Base Solution/include/: geometry_primitives.h  solution_base.h
Base Solution/python/: base_solution.py
Gui/: create_object_dialog.ui  lets_do_solution.ui  lets_do_solution_README.md  ui_loader.py
Gui/3D-Solution/: main.ui
Root Solution/: README.md  main.py
Root Solution/3D-Solution/: README.md  main.py  main_3d.py  occ_3d_view.py  visualization_3d.py  visualization_dialog.py
check/: 3D_VISUALIZATION_FIX_REPORT.md.md  ARCHITECTURE_REORGANIZATION_REPORT.md.md  CLEANUP_COMPLETION_REPORT.md.md  FINAL_SUCCESS_REPORT.md.md  FULL_INTEGRATION_REPORT.md.md  INSTALL.md.md  README.md.md  SAFE_SERIALIZATION_MIGRATION_REPORT.md.md  cursor-settings.json.md  demo_3d_visualization.py.md  opencascade_integration.py.md  quick_ci_setup_script .sh.md  setup_environment.py.md  solution_data_types.py.md  test_3d_view.py.md
check/Base Solution/Base Solution/cpp/: solution_base.cpp
check/Base Solution/Base Solution/include/: solution_coordinate.h
check/Base Solution/Base Solution/python/: solution_coordinate.py
check/Base Solution/cpp/: coordinate_system.cpp.md
check/Base Solution/python/: __init__.py.md
check/Gui/: README.md.md  lets_do_solution.ui.md
check/Gui/Gui/3D-Solution/: visualization_dialog.ui
check/Operation Solution/Operation Solution/cpp/: CMakeLists.txt  boolean_operations.cpp  geometry_operations.cpp
check/Operation Solution/Operation Solution/opencascade/: boolean_operations.h  geometry_operations.h
check/Operation Solution/cpp/: visualization_3d.cpp.md
check/Operation Solution/opencascade/: visualization_3d.h.md
check/Operation Solution/python/: operation_bindings.cpp.md
check/Root Solution/3D-Solution/: integrated_3d_view.py.md  simple_3d_view.py.md
check/Root Solution/Root Solution/python/: __init__.py
check/Root Solution/python/: root_solution_manager.py.md
check/Scripts/Scripts/: migrate_pickle_to_json.py
check/project/project/: safe_serializer.py
check/tests/: test_safe_serialization.py.md
